fixed font-weight bug on mobile safari

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 h1 {
 	color: #000000;
 	font-family: 'Gravitas One', Arial, sans-serif;
+	font-weight: normal;
 	font-size: 94px;
 	text-decoration: underline;
 	margin-right: 40px;
